--- a/src/pages/local/01_dashboard.html
+++ b/src/pages/local/01_dashboard.html
@@ -310,7 +310,8 @@
     </div>
     <footer>
         <div class="flex gap-10 px-4 py-4 border-t border-gray-100">
-            <button class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded w-72 flex items-center justify-center gap-4" id="importData">
+            <button class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded w-44 flex items-center justify-center gap-4"
+                id="importData">
                 <svg class="h-8 fill-slate-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                     <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
@@ -318,7 +319,8 @@
                 </svg>
                 <span class="t_import"></span>
             </button>
-            <button class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded flex items-center justify-center gap-4 w-72" id="exportData">
+            <button class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded flex items-center justify-center gap-4 w-72"
+                id="exportData">
                 <svg class="h-8 fill-green-700" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
@@ -327,7 +329,7 @@
                 <span class="t_export_data"></span>
             </button>
             <button id="users"
-                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded hidden items-center justify-center gap-4 w-72">
+                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded hidden items-center justify-center gap-4 w-52">
                 <svg class="h-8 fill-sky-700" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 640 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
@@ -335,6 +337,16 @@
                 </svg>
 
                 <span class="t_users"></span>
+            </button>
+            <button id="institution"
+                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded hidden items-center justify-center gap-4 w-44">
+                <svg class="h-8 fill-slate-500" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path
+                        d="M243.4 2.6l-224 96c-14 6-21.8 21-18.7 35.8S16.8 160 32 160v8c0 13.3 10.7 24 24 24H456c13.3 0 24-10.7 24-24v-8c15.2 0 28.3-10.7 31.3-25.6s-4.8-29.9-18.7-35.8l-224-96c-8-3.4-17.2-3.4-25.2 0zM128 224H64V420.3c-.6 .3-1.2 .7-1.8 1.1l-48 32c-11.7 7.8-17 22.4-12.9 35.9S17.9 512 32 512H480c14.1 0 26.5-9.2 30.6-22.7s-1.1-28.1-12.9-35.9l-48-32c-.6-.4-1.2-.7-1.8-1.1V224H384V416H344V224H280V416H232V224H168V416H128V224zM256 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
+                </svg>
+            
+                <span class="t_institution"></span>
             </button>
         </div>
     </footer>
