select service inson - WIP

--- a/src/pages/instruments/01_cpis.html
+++ b/src/pages/instruments/01_cpis.html
@@ -19,7 +19,7 @@
 
             <div class="flex justify-between mt-8 px-5">
                 <h1 class="text-xl">
-                    <span class="t_children_placed_in_the_service">locading...</span>
+                    <span class="t_children_placed_in_the_service">loading...</span>
                 </h1>
                 <div>
                     <button class="bg-menuButton text-white px-3 py-1 rounded hidden gap-3 items-center" id="add_child_cpis">
